--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^4.0.4",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mongoose": "^5.12.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
